feat: add new endpoint
