# src/resources/users/user.model.js
@@ -5,10 +5,7 @@ const Schema = mongoose.Schema;
 
 const User = new Schema(
   {
-    userName: {
-      type: String,
-      required: false
-    },
+    name: String,
     email: {
       type: String,
       required: true,
