# src/utils/validation/schemas.js
@@ -33,7 +33,7 @@ const schemas = {
   user: Joi.object()
     .options({ abortEarly: false, allowUnknown: true })
     .keys({
-      userName: Joi.string(),
+      name: Joi.string().max(200),
       email: Joi.string().email({ tlds: { allow: false } }),
       password: Joi.string().custom((value, helpers) => {
         const password = value.trim();
